crates/rargc/tests/snapshots/test_scripts__impl-121.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] catch-all.sh other something with --additional args and --debug -- with something else"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
args:
- ${args[--debug]} = 1

other_args:
- ${other_args[*]} = something with --additional args and with something else
- ${other_args[0]} = something
- ${other_args[1]} = with
- ${other_args[2]} = --additional
- ${other_args[3]} = args
- ${other_args[4]} = and
- ${other_args[5]} = with
- ${other_args[6]} = something
- ${other_args[7]} = else

