crates/rargc/tests/snapshots/test_scripts__impl-122.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] catch-all.sh no-multiple something with --additional args and --debug -- with something else"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
args:
- ${args[--debug]} = 1
- ${args[message]} = something

other_args:
- ${other_args[*]} = with --additional args and with something else
- ${other_args[0]} = with
- ${other_args[1]} = --additional
- ${other_args[2]} = args
- ${other_args[3]} = and
- ${other_args[4]} = with
- ${other_args[5]} = something
- ${other_args[6]} = else

